# FinSight

./: .dockerignore  .gitattributes  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  clippy.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/finsight-agent/: Cargo.toml
crates/finsight-agent/src/: agent.rs  anomaly.rs  categorizer.rs  context.rs  executor.rs  finance.rs  lib.rs  navigation.rs  planner.rs  recipe_runner.rs
crates/finsight-agent/src/planning/: mod.rs
crates/finsight-agent/src/providers/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai_compat.rs
crates/finsight-agent/src/reasoning/: engine.rs  messages.rs  mod.rs
crates/finsight-api/: Cargo.toml
crates/finsight-api/src/: csv.rs  error.rs  lib.rs  provider.rs  secrets.rs  sink.rs  startup.rs  sync_scheduler.rs
crates/finsight-api/src/commands/: accounts.rs  agent.rs  assets.rs  budget.rs  cashflow.rs  categories.rs  copilot.rs  copilot_chat.rs  data_health.rs  household.rs  import.rs  inbox.rs  insights.rs  investments.rs  journey.rs  meta.rs  metrics.rs  mod.rs  month_close.rs  notifications.rs  onboarding.rs  planned_transactions.rs  push.rs  recipes.rs  recurring.rs  reports.rs  restoration.rs  scenarios.rs  settings.rs  simplefin.rs  spending.rs  transactions.rs
crates/finsight-app/: Cargo.toml
crates/finsight-app/src/: error.rs  lib.rs  notifications.rs  sync_scheduler.rs
crates/finsight-app/src/commands/: accounts.rs  agent.rs  assets.rs  budget.rs  categories.rs  copilot.rs  copilot_chat.rs  data_health.rs  household.rs  import.rs  inbox.rs  insights.rs  investments.rs  journey.rs  meta.rs  metrics.rs  mod.rs  onboarding.rs  planned_transactions.rs  recipes.rs  recurring.rs  reports.rs  restoration.rs  scenarios.rs  settings.rs  simplefin.rs  spending.rs  transactions.rs
crates/finsight-app/tests/: audit_probe.rs  categorization_cmd.rs  copilot_live.rs  edit_account_cmd.rs  edit_transaction_cmd.rs  error_mapping.rs  onboarding_cmd.rs  phase6_categorize_live.rs  phase6_diagnostics.rs  prepare_csv_cmd.rs  reports_error_handling.rs  startup_empty.rs  startup_provider.rs
crates/finsight-bindings/: Cargo.toml
crates/finsight-bindings/src/: lib.rs
crates/finsight-bindings/src/commands/: agent.rs  assets.rs  budget.rs  cashflow.rs  copilot.rs  copilot_chat.rs  import.rs  inbox.rs  metrics.rs  mod.rs  month_close.rs  notifications.rs  push.rs  recurring.rs  reports.rs  scenarios.rs  simplefin.rs  spending.rs
crates/finsight-bindings/tests/: audit_probe.rs  copilot_live.rs  edit_account_cmd.rs  error_mapping.rs  phase6_categorize_live.rs  phase6_diagnostics.rs  prepare_csv_cmd.rs  reports_error_handling.rs  startup_provider.rs
crates/finsight-core/: Cargo.toml  build.rs
crates/finsight-core/migrations/: V001__initial_schema.sql  V002__phase2_schema.sql  V003__phase3_schema.sql  V004__budgets_goals.sql  V005__scenarios.sql  V006__net_worth_snapshots.sql  V007__manual_assets.sql  V008__liabilities.sql  V009__rule_proposals.sql  V010__agent_memory.sql  V011__transaction_flags.sql  V012__transaction_splits.sql  V013__agent_platform.sql  V014__trusted_recipes.sql  V015__spending_types.sql  V016__category_updated_at.sql  V017__goal_purpose.sql  V018__planned_transactions.sql  V019__liability_min_payment.sql  V019__simplefin.sql  V020__planning_metadata.sql  V021__account_apy_loan_details.sql  V022__goal_links.sql  V022__simplefin.sql  V024__simplefin_connections.sql  V025__simplefin_phase4.sql  V026__import_reconciliation_workbench.sql  V027__perf_indexes.sql  V028__monthly_reviews_milestones.sql  V029__copilot_conversations.sql  V030__category_palette.sql  V031__copilot_message_parts.sql  V032__copilot_ag_ui_metadata.sql  V033__transaction_is_transfer.sql  V034__category_guidance.sql  V035__transaction_transfer_peer.sql  V036__category_palette_regrey_backfill.sql  V037__default_spending_types.sql  V038__household_members.sql  V039__unify_liabilities_into_accounts.sql  (+21 more)
crates/finsight-core/src/: anomaly.rs  cashflow.rs  categorize.rs  currency.rs  db.rs  error.rs  forecast.rs  investments.rs  keychain.rs  lib.rs  merchant.rs  metrics.rs  notify.rs  palette.rs  provenance.rs  recurring.rs  reset_barrier.rs  routes.rs  sample.rs  seed.rs  settings.rs  subscriptions.rs
crates/finsight-core/src/models/: account.rs  agent_memory.rs  alert.rs  categorization.rs  category.rs  connection.rs  copilot.rs  holding.rs  household.rs  import_candidate.rs  institution.rs  liability.rs  manual_asset.rs  mod.rs  net_worth.rs  planned_transaction.rs  recipes.rs  rule.rs  rule_proposal.rs  security.rs  sync_run.rs  transaction.rs  transfer.rs
crates/finsight-core/src/repos/: accounts.rs  agent_memory.rs  alerts.rs  budgets.rs  categories.rs  categorizations.rs  connections.rs  conversations.rs  copilot_actions.rs  copilot_sessions.rs  goals.rs  holdings.rs  household.rs  import_candidates.rs  imports.rs  institutions.rs  liabilities.rs  manual_assets.rs  mod.rs  net_worth.rs  planned_transactions.rs  (+12 more)
crates/finsight-core/tests/: db.rs  keychain.rs  migration_unify_liabilities.rs  migrations.rs  migrations_palette.rs  migrations_v2.rs  repos_accounts.rs  repos_transactions.rs  repos_transactions_search.rs  sample_seed.rs  seed.rs  sqlcipher_smoke.rs
crates/finsight-eval/: Cargo.toml
crates/finsight-eval/src/: main.rs  seed.rs
crates/finsight-providers/: Cargo.toml
crates/finsight-providers/benches/: import_phases.rs
crates/finsight-providers/src/: error.rs  lib.rs  provider.rs
crates/finsight-providers/tests/: csv_integration.rs  prepare_edge.rs  prepare_parity.rs  wealthsimple_investment.rs
crates/finsight-server/: Cargo.toml
crates/finsight-server/src/: auth.rs  crypto.rs  dispatch.rs  events.rs  lib.rs  main.rs  registry.rs  router.rs  server_info.rs  sessions.rs  state.rs  uploads.rs  users.rs
crates/finsight-server/tests/: auth.rs  balance_timeline.rs  parity.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
(+523 files in other folders)
