[workspace]
resolver = "2"
members = [
  "crates/finsight-core",
  "crates/finsight-providers",
  "crates/finsight-agent",
  "crates/finsight-api",
  "crates/finsight-bindings",
  "crates/finsight-eval",
  "crates/finsight-server",
  "src-tauri",
]
default-members = ["src-tauri"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.24", features = ["bundled-sqlcipher"] }
refinery = { version = "0.8", features = ["rusqlite"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
specta = { version = "=2.0.0-rc.22" }
specta-typescript = { version = "=0.0.9" }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
rstest = "0.21"
tempfile = "3"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.35", features = ["serde"] }
base64 = "0.22"
url = "2.5"
# Web Push (VAPID + RFC 8291 payload encryption) for the installed PWA.
# `default-features = false` drops the crate's bundled isahc HTTP client — the
# workspace already has reqwest, and pulling a second HTTP stack (plus its TLS)
# in just to POST a pre-built body is not worth it. We use the message builder
# and send it ourselves. Pure Rust either way: no OpenSSL, no ring.
web-push = { version = "0.11", default-features = false }
# P-256 keygen for the VAPID keypair. `pem` gives SEC1 PEM output, which is the
# format web-push's VAPID signer parses.
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
