[package]
name = "finsight-tauri"
version = "0.0.0"
edition.workspace = true
license.workspace = true
default-run = "finsight"

[lib]
name = "app_main"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "finsight"
path = "src/main.rs"

[[bin]]
name = "export_bindings"
path = "src/bin/export_bindings.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
finsight-app = { path = "../crates/finsight-app" }
finsight-core = { path = "../crates/finsight-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
specta-typescript.workspace = true
