[package]
name = "finsight-agent"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
finsight-core = { path = "../finsight-core" }
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
