[package]
name = "finsight-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
finsight-core = { path = "../finsight-core" }
finsight-agent = { path = "../finsight-agent" }
finsight-providers = { path = "../finsight-providers" }
serde.workspace = true
serde_json.workspace = true
specta = { workspace = true, features = ["derive", "serde_json"] }
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
base64.workspace = true
rust_decimal.workspace = true
url.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
