[package]
name = "finsight-app"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
finsight-core = { path = "../finsight-core" }
finsight-providers = { path = "../finsight-providers" }
finsight-agent = { path = "../finsight-agent" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
specta = { workspace = true, features = ["derive", "serde_json"] }
specta-typescript.workspace = true
tauri-specta.workspace = true

uuid.workspace = true
rusqlite.workspace = true
chrono.workspace = true
reqwest.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[dev-dependencies]
keyring.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
chrono.workspace = true
tokio = { version = "1", features = ["full"] }
