[package]
name = "finsight-bindings"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

# This crate is a LIBRARY only: it provides `build_specta_builder()` and the
# `#[tauri::command]` wrappers. The thin `export_bindings` binary that calls
# them lives in `src-tauri` (behind its `codegen` feature) because a Wry-linked
# binary needs that crate's `tauri_build` setup to run on Windows.

[dependencies]
finsight-core = { path = "../finsight-core" }
finsight-providers = { path = "../finsight-providers" }
finsight-agent = { path = "../finsight-agent" }
finsight-api = { path = "../finsight-api" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
specta = { workspace = true, features = ["derive", "serde_json"] }
specta-typescript.workspace = true
tauri-specta.workspace = true

uuid.workspace = true
rusqlite.workspace = true
chrono.workspace = true
reqwest.workspace = true
tauri = { version = "2", features = [] }
# The command wrappers spawn OS notifications via `notifications.rs`; the other
# desktop plugins (single-instance/dialog/opener) left with the dead
# `configure_app` app-lifecycle setup when this became a codegen-only crate.
tauri-plugin-notification = "2"

[dev-dependencies]
keyring.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
chrono.workspace = true
tokio = { version = "1", features = ["full"] }
