[package]
name = "finsight-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
refinery.workspace = true
keyring.workspace = true
rand.workspace = true
chrono.workspace = true
uuid.workspace = true
specta = { workspace = true, features = ["derive", "chrono", "uuid"] }
zeroize.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
