[package]
name = "finsight-providers"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
finsight-core = { path = "../finsight-core" }
csv = "1.3"
encoding_rs = "0.8"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
specta = { workspace = true, features = ["derive", "chrono", "uuid"] }
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
