[package]
name = "finsight-providers"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
finsight-core = { path = "../finsight-core" }
csv = "1.3"
encoding_rs = "0.8"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
specta = { workspace = true, features = ["derive", "chrono", "uuid"] }
rusqlite.workspace = true
reqwest = { workspace = true, features = ["json"] }
base64.workspace = true
url.workspace = true
rust_decimal.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true
finsight-core = { path = "../finsight-core" }
wiremock = "0.6"
