[package]
name = "finsight-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
finsight-api = { path = "../finsight-api" }
finsight-core = { path = "../finsight-core" }
finsight-agent = { path = "../finsight-agent" }
axum = { version = "0.8", features = ["json"] }
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
# NOTE: tower-http (fs) is intentionally NOT added yet — nothing in this crate
# uses it until Task 12 (static file serving with SPA fallback).
# regex is a dev-dependency only, added in Task 10 for the parity test parser.

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile.workspace = true
regex = "1"
