[package]
name = "finsight-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
finsight-api = { path = "../finsight-api" }
finsight-core = { path = "../finsight-core" }
finsight-agent = { path = "../finsight-agent" }
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
argon2 = "0.5"
chacha20poly1305 = "0.10"
hex = "0.4"
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
zeroize.workspace = true
# regex is a dev-dependency only, added in Task 10 for the parity test parser.

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile.workspace = true
regex = "1"
